--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "eslint-config-scuba-squad": "^2.0.0",
     "grunt": "^1.0.3",
     "grunt-eslint": "^22.0.0",
-    "mocha": "^8.0.0",
+    "mocha": "~8.1.0",
     "nyc": "^15.0.0",
     "unit.js": "^2.1.1"
   },
   "dependencies": {
     "@scuba-squad/transformation": "^2.0.2",
     "debug": "^4.1.0",
-    "underscore": "^1.9.0"
+    "underscore": "~1.12.0"
   }
 }
