remove grunt dependency

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "http-error"
   ],
   "scripts": {
-    "build": "grunt",
+    "build": "npm run lint",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "generate": "node generate/build.js",
-    "lint": "grunt eslint",
-    "pretest": "grunt",
+    "lint": "npx eslint ./",
+    "lint:fix": "npm run lint -- --fix",
+    "pretest": "npm run build",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha test",
     "posttest": "mocha --reporter markdown > TEST.md",
     "preversion": "npm test"
@@ -36,8 +36,6 @@
     "coveralls": "^3.0.6",
     "eslint": "^6.8.0",
     "eslint-config-scuba-squad": "^2.0.0",
-    "grunt": "^1.0.3",
-    "grunt-eslint": "^22.0.0",
     "mocha": "^8.4.0",
     "nyc": "^15.0.0",
     "unit.js": "^2.1.1"
